Removed HideFlags and introduced them as CustomItemFlag