@@ -1,6 +1,5 @@
 package de.doppelkool.itemforgegui.Main.MenuItems;
 
-import de.doppelkool.itemforgegui.Main.CustomItemManager.Flags.CustomItemFlagManager;
 import de.doppelkool.itemforgegui.Main.CustomItemManager.Flags.PreventionFlagManager;
 import de.doppelkool.itemforgegui.Main.CustomItemManager.ItemInfoManager;
 import de.doppelkool.itemforgegui.Main.Main;
@@ -144,7 +143,7 @@ public class ItemStackHelper {
 			&& (item.getItemMeta().getEnchantLevel(glowEnchantment) == 1);
 	}
 
-	public static void setGlow(ItemStack item, boolean active) {
+	public static void setActivated(ItemStack item, boolean active) {
 		String activatedLorePart = "Activated";
 		String deactivatedLorePart = "Deactivated";
 
@@ -156,16 +155,16 @@ public class ItemStackHelper {
 
 			if (lore.getFirst().contains(activatedLorePart) ||
 				lore.getFirst().contains(deactivatedLorePart)) {
-				lore.remove(0);
+				lore.removeFirst();
 			}
 		}
 
 		if (active) {
 			itemMeta.addEnchant(glowEnchantment, 1, true);
-			lore.add(0, ChatColor.GREEN + "" + ChatColor.ITALIC + activatedLorePart);
+			lore.addFirst(ChatColor.GREEN + "" + ChatColor.ITALIC + activatedLorePart);
 		} else {
 			itemMeta.removeEnchant(glowEnchantment);
-			lore.add(0, ChatColor.RED + "" + ChatColor.ITALIC + deactivatedLorePart);
+			lore.addFirst(ChatColor.RED + "" + ChatColor.ITALIC + deactivatedLorePart);
 		}
 		itemMeta.setLore(lore);
 		item.setItemMeta(itemMeta);
@@ -189,30 +188,6 @@ public class ItemStackHelper {
 		for (PreventionFlagManager.CraftingPreventionFlag craftingPrevention : PreventionFlagManager.CraftingPreventionFlag.values()) {
 			ChatColor color = craftingPrevention.equals(activeCraftingPrevention) ? ChatColor.GREEN : ChatColor.RED;
 			newLore.add(ChatColor.GRAY + "- " + color + craftingPrevention.getItemDescription());
-		}
-
-		itemMeta.setLore(newLore);
-		itemStackClone.setItemMeta(itemMeta);
-	}
-
-	public static void updateCustomItemFlagInMenuItemLore(ItemStack itemStackClone, CustomItemFlagManager.HideFlag activeHideFlag) {
-		ItemMeta itemMeta = itemStackClone.getItemMeta();
-		List<String> oldLore = itemMeta.getLore();
-
-		List<String> newLore = new ArrayList<>();
-		if (oldLore != null && !oldLore.isEmpty()) {
-			newLore.add(oldLore.get(0));
-			if (oldLore.size() > 1) {
-				newLore.add(oldLore.get(1));
-			}
-		} else {
-			newLore.add("");
-			newLore.add("");
-		}
-
-		for (CustomItemFlagManager.HideFlag hideFlag : CustomItemFlagManager.HideFlag.values()) {
-			ChatColor color = hideFlag.equals(activeHideFlag) ? ChatColor.GREEN : ChatColor.RED;
-			newLore.add(ChatColor.GRAY + "- " + color + hideFlag.getItemDescription());
 		}
 
 		itemMeta.setLore(newLore);
